one-pager without slides, almost done

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -162,7 +162,7 @@ nav a.btn {
 
 .meta-border {
   border-bottom: 2px solid #e5e5e5;
-  margin: 30px auto 20px;
+  margin: 0 auto 20px;
 }
 
 .team-member img {
