--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,9 @@
 {% load static %}
-<section class="section"><a name="page-3"></a>
+<section  class="bg-secondary mb-0" id="about">
   <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h1 class="display-4 hcenter">ABOUT</h1>
-      </div>
-    </div>
+    <h2 class="text-center text-uppercase">About</h2>
+
+    <hr class="star-dark mb-5">
 
     <div class="row">
       <div class="col-4 text-center">
@@ -72,9 +70,9 @@
 
     </div>
 
-    <div class="meta-border"></div>
+    <div class="border-dark mt-5"></div>
 
-    <h2 class="hcenter">Trusted By</h2>
+    <h3 class="text-center mt-5 mb-4">Trusted By</h3>
 
     <div class="row text-center">
       <div class="col-sm-4 col-xs-6 d-flex align-items-center">
