leaflet works a bit better..

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="col-sm-6 text-center">
-        <div id="map" class="col-sm-6" height="100%" width="100%">
+        <div id="map" class="col-sm-6">
         </div>
       </div>
     </div>
