first working HP

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
       <div class="col-lg-8 mx-auto">
         {# <h1 class="display-4">Consultancy Services for</h1> #}
         <h1 class="display-4" id="title_div">
-            <a class="typewrite" data-period="3000" data-type='["Developer", "GIS Expert", "Designer", "Analyst"]'>
+            <a class="typewrite" data-period="3000" data-type='["GIS Expert", "Developer", "Analyst", "Designer"]'>
               <span class="wrap"></span>
             </a>
         </h1>
