--- a/templates/about.html
+++ b/templates/about.html
@@ -9,24 +9,25 @@
       <div class="col-4 text-center">
         <div class="team-member">
           <img class="rounded-circle" src="{% static 'img/profile_pic-01.jpg' %}" alt="">
+
+          <h5 class="mt-3">Nils Nolde</h5>
+          <p class="text-muted">
+            MSc. Geology
+            <br>
+            <br>
+            GIS Expert
+            <br>
+            Geophysicist
+            <br>
+            Exploration Geologist
+          </p>
         </div>
-        <h5>Nils Nolde</h5>
-        <p class="text-muted">
-          MSc. Geology
-          <br>
-          <br>
-          GIS Expert
-          <br>
-          Geophysicist
-          <br>
-          Exploration Geologist
-        </p>
       </div>
 
       <div class="col-4 text-center">
         <div class="team-member">
           <img class="rounded-circle" src="{% static 'img/profile_pic-02.jpg' %}" alt="">
-          <h5>Nils Nolde</h5>
+          <h5 class="mt-3">Nils Nolde</h5>
           <p class="text-muted">
             Owner and Founder
           </p>
@@ -54,35 +55,41 @@
       <div class="col-4 text-center">
         <div class="team-member">
           <img class="rounded-circle" src="{% static 'img/profile_pic-03.jpg' %}" alt="">
+          <h5 class="mt-3">Nils Nolde</h5>
+          <p class="text-muted">
+            FOSS enthusiast
+            <br>
+            <br>
+            <a target="_blank" href="https://openrouteservice.org/team/">openrouteservice.org</a>
+            <br>
+            <a target="_blank" href="https://pypi.python.org/pypi/openrouteservice">PyPI repository</a>
+            <br>
+            <a target="_blank" href="https://plugins.qgis.org/plugins/author/Nils%2520Nolde/">QGIS Plugin(s)</a>
+          </p>
         </div>
-        <h5>Nils Nolde</h5>
-        <p class="text-muted">
-          FOSS enthusiast
-          <br>
-          <br>
-          <a target="_blank" href="https://openrouteservice.org">openrouteservice.org</a>
-          <br>
-          <a target="_blank" href="https://pypi.python.org/pypi/openrouteservice">PyPI repository</a>
-          <br>
-          <a target="_blank" href="https://plugins.qgis.org/plugins/author/Nils%2520Nolde/">QGIS Plugin(s)</a>
-        </p>
-      </div>
 
+      </div>
     </div>
 
     <div class="border-dark mt-5"></div>
 
     <h3 class="text-center mt-5 mb-4">Trusted By</h3>
 
-    <div class="row text-center">
+    <div class="row text-center" id="trusted">
       <div class="col-sm-4 col-xs-6 d-flex align-items-center">
-        <img src="{% static 'img/svg_unis.svg' %}" alt="Card image cap" width="100%">
+        <a target="_blank" href="https://www.unis.no">
+          <img src="{% static 'img/svg_unis.svg' %}" alt="UNIS" width="100%">
+        </a>
       </div>
       <div class="col-xs-6 col-sm-4 d-flex align-items-center">
-        <img src="{% static 'img/ZALANDO_small.png' %}" alt="Card image cap" width="100%">
+        <a target="_blank" href="https://www.zalando.de">
+          <img src="{% static 'img/ZALANDO_small.png' %}" alt="Zalando" width="100%">
+        </a>
       </div>
       <div class="col-sm-4 col-xs-6 d-flex align-items-center">
-        <img src="{% static 'img/openrouteservice.png' %}" alt="Card image cap" width="100%">
+        <a target="_blank" href="https://openrouteservice.org">
+          <img src="{% static 'img/openrouteservice.png' %}" alt="openrouteservice" width="100%">
+        </a>
       </div>
     </div>
 
