--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section  class="mb-0" id="contact">
+<section id="contact">
   <div class="container">
     <h2 class="text-center text-uppercase">Contact</h2>
 
@@ -10,14 +10,14 @@
         <div class="container">
           <h5 class="mb-4">Geophox - Nils Nolde</h5>
           <div class="row vdivide">
-            <div class="col-6 text-left">
+            <div class="col-sm-6 text-left">
               Fichtestraße 32
               <br>
               10967 Berlin
               <br>
               Germany
             </div>
-            <div class="col-6 text-left">
+            <div class="col-sm-6 text-left">
               <img src="{% static 'img/svg_phone.svg' %}" alt="phone" height="20px">
                 <span class="text-muted">+49 (0)176 2423 1893</span>
               <br>
@@ -27,9 +27,8 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6 text-center">
-        <div id="map" class="col-sm-6">
-        </div>
+      <div class="col-sm-6">
+        <div id="map_contact"></div>
       </div>
     </div>
   </div>
