--- a/templates/index.html
+++ b/templates/index.html
@@ -1,77 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html class="has-navbar-fixed-top">
-  <head>
-    <title>Geophox - Leverage geomatics</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-    <!-- THEME CSS -->
-    <link href="{% static 'css/theme/magnific-popup.css' %}" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/theme/freelancer.min.css' %}" rel="stylesheet">
-
-    <!-- FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Monda:400,700" rel="stylesheet">
-
-    <!-- CUSTOM CSS -->
-    <!-- <link rel="stylesheet" href="{% static 'css/master.css' %}"> -->
-    <link rel="stylesheet" href="{% static 'css/media.css' %}">
-    <link rel="stylesheet" href="{% static 'css/geophox_animate.css' %}">
-
-    <!-- CUSTOM JAVASCRIPT -->
-    <script type="text/javascript" src="{% static 'js/typewriter.js' %}"></script>
-
-    <!-- LEAFLET -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-
-    <script>
-  	  $(function(){$('#title_div').hide().delay(2500).fadeIn(1000);});
-    </script>
-
-  </head>
-
-  <body id="page-top">
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <img src="{% static 'img/geophox-150x41.png' %}" alt="Geophox: leverage geomatics" >
-      </a>
-      <button class="navbar-toggler navbar-toggler-right text-black rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fa fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#services">Services</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <form class="form-inline">
-          <a class="btn" target="_blank" href="https://www.github.com/nilsnolde">
-              <i class="fab fa-github-square fa-4x" aria-hidden="true"></i>
-          </a>
-      </form>
-    </div>
-  </nav>
-
+{% block content %}
   <!-- Header -->
   {% include 'home.html' %}
 
@@ -85,85 +15,35 @@
   {% include 'contact.html'%}
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+
+        <div class="col-sm-6">
+          <p> <a href="{% url 'impressum' %}">Impressum</a> </p>
         </div>
-        <div class="col-md-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Around the Web</h4>
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item">
-              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                <i class="fa fa-fw fa-facebook"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                <i class="fa fa-fw fa-google-plus"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                <i class="fa fa-fw fa-twitter"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                <i class="fa fa-fw fa-linkedin"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                <i class="fa fa-fw fa-dribbble"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+
+        <div class="col-sm-6">
+          <p>&copy; Nils Nolde 2018. All rights reserved.</p>
         </div>
       </div>
     </div>
   </footer>
+{% endblock content %}
 
-  <div class="copyright py-4 text-center text-white">
-    <div class="container">
-      <small>Copyright &copy; Your Website 2018</small>
-    </div>
-  </div>
+{% block scripts %}
+  <script>
+	  $(function(){$('#title_div').hide().delay(2500).fadeIn(1000);});
+  </script>
 
-  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-to-top d-lg-none position-fixed ">
-    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
-      <i class="fa fa-chevron-up"></i>
-    </a>
-  </div>
+  <!-- CUSTOM JAVASCRIPT -->
+  <script src="{% static 'js/theme/theme_custom.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/typewriter.js' %}"></script>
+
+  <!-- LEAFLET -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
   <!-- CUSTOM LEAFLET JavaScript -->
   <script type="text/javascript" src="{% static 'js/map_contact.js' %}"></script>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
-
-  <!-- Plugin JavaScript -->
-  <script src="{% static 'js/theme/jquery.easing.min.js' %}"></script>
-  <script src="{% static 'js/theme/jquery.magnific-popup.min.js' %}"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="{% static 'js/theme/jqBootstrapValidation.js' %}"></script>
-  <script src="{% static 'js/theme/contact_me.js' %}"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="{% static 'js/theme/theme_custom.js' %}"></script>
-
-</body>
-
-</html>
+{% endblock scripts %}
