correct Github button to be in hamburger menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,14 +66,14 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a class="btn" target="_blank" href="https://www.github.com/nilsnolde">
+                    <i class="fab fa-github-square fa-4x" aria-hidden="true"></i>
+                </a>
+            </li>
+          </ul>
         </div>
-        <form class="form-inline">
-            <a class="btn" target="_blank" href="https://www.github.com/nilsnolde">
-                <i class="fab fa-github-square fa-4x" aria-hidden="true"></i>
-            </a>
-        </form>
-        <!-- <form class="form-inline">
-        </form> -->
       </div>
     </nav>
 
